# crm

./: .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  CRM Updated open TKTs.htm  Cargo.toml  Cargo.toml.test  Cargo2.toml  Dockerfile  Dockerfile.dev  GUI_IMPROVEMENTS_SUMMARY.md  LICENSE  PR_DESCRIPTION.md  README.md  README_LOGS.md  README_benchmark.txt  check_output.txt  cognito_login.py  deny.toml  docker-build.sh  docker-compose.yml  final_check.txt  fix_auto_heal.py  fix_clippy.patch  fix_clippy.py  fix_clippy2.py  fix_clippy3.py  fix_commands.patch  fix_date_format5.patch  fix_date_format6.patch  fix_date_format_test.patch  fix_html_table.py  fix_md.py  fix_rustfmt.py  fix_team_csv.py  fix_tests.patch  fix_tests.py  (+108 more)
.circleci/: config.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: build-windows.yml  ci.yml  release-crm.yml  release-runner.yml  release-tasker.yml  release-yasweb.yml  release.yml  test.yml
Issues/: audit_report_1.md  audit_report_2.md
TestingDownloads/: assignement settings.csv  lead_report_1783627642439.csv  tasker_config.json  users.csv
TestingDownloads/task1/: teams.csv
benches/: authentication.rs  config_merging.rs  csv_parsing.rs  dashboard_generation.rs  manifest_loading.rs  regex_matching.rs
docs/: repository-assessment.md
issues/: audit_report.md  tasker_cli_analysis.md
md/: AI_DOC_POLICY.md  AI_DOC_POLICY.md.update  APPLICATION_SUMMARY.md  APPLICATION_SUMMARY.md.orig  ARCHITECTURE.md  AUTH_FLOW.md  BUILD_AND_RUN.md  CLI.md  CONFIG.md  CRM_STARTUP.md  DEPENDENCY_AUDIT.md  DOCKER.md  DOWNLOADER.md  FETCHER.md  GUI_IMPROVEMENTS_SUMMARY.md  MANIFEST_SCHEMA.md  OPERATIONS.md  OPERATIONS.md.rej  PERFORMANCE_REPORT_YASWEB.md  README.md  REBUILD_GUIDE.md  SCHEDULER_TRAY.md  SKILLS.md  TASKER.md  TESTING.md  WCXX.md  csv_fixes.md  panic_handling_updates.md
plan/: fix_dashboard_updater.md  fix_dashboard_updater_and_crm_tasks.md  fix_task3_issues.md  fix_tasker_file_handles.md  fix_tasker_tests_windows.md  fix_test_permissions.md  improve_documentation_dx.md  panic_audit_plan.md  performance_audit.md  refactor_crm_startup.md
src/: auth.rs  cli.rs  config.rs  downloader.rs  fetcher.rs  lib.rs  main.rs  manifest.rs  utils.rs  utils.rs.orig  utils.rs.rej
src/core/: auth.rs  config.rs
src/crm/: auth.rs  config.rs  downloader.rs  fetcher.rs  mod.rs  types.rs
src/interface/: cli.rs
src/runner/: config.rs  config.rs.orig  engine.rs  form_script.js  form_script.js.orig  gui.rs  mod.rs
src/services/: downloader.rs  fetcher.rs  mod.rs
src/tasker/: config.rs  crm_open_sohail.rs  csv_task.rs  dashboard_updater.rs  email.rs  mod.rs
src/yasweb/: browser.rs  browser.rs.orig  config.rs  mod.rs
tests/: authentication.rs  configuration.rs  csv_processing.rs  manifest.rs  runner.rs  test_crm_startup.rs  yasweb_date_format.rs
