[package]
name = "crm_tool"
version = "1.1.0"
edition = "2021"
authors = ["CRM Tool"]
description = "Runner + CRM tool with tray scheduler, configurable tasks, and Cognito authentication"
autobins = false

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[[bin]]
name = "crm"
path = "src/bin/crm.rs"

[dependencies]
# Async runtime — only the features we actually use
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync", "net", "process"] }
# HTTP client — rustls for Windows TLS, streaming for CSV download
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls", "query"] }
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Error handling
anyhow = "1.0.102"
# Logging — minimal features
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "registry", "smallvec"] }
tracing-appender = "0.2.5"
# Date/time
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde", "std"] }
# Async utilities — only what we use (StreamExt, join_all)
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
# SRP big integer math
num-bigint = "0.4.6"
# Cryptography
sha2 = "0.11.0"
hmac = "0.13.0"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
rand = "0.10.1"
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
# URL decoding for CSV filenames
urlencoding = "2.1.3"
chrono-tz = "0.10.4"
open = "5.3.5"
headless_chrome = "1.0.21"


[profile.release]
opt-level = 3          # maximize runtime optimization
lto = "fat"            # whole-program link-time optimization
strip = "symbols"      # strip symbols from release binaries
codegen-units = 1      # maximize optimization across crate
panic = "abort"        # smaller than unwinding
debug = false          # omit debug info in release artifacts
incremental = false    # keep release builds fully optimized
overflow-checks = false
[[bin]]
name = "yasweb"
path = "src/bin/yasweb.rs"

[[bin]]
name = "wcxx"
path = "src/bin/wcxx.rs"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.24.0"
muda = "0.19.2"
winit = "0.30.13"
